# FakerCraft

./: .gitignore  Cargo.toml  README.md  next.config.js  package.json
app/: layout.tsx  page.tsx
app/components/: Header.tsx
