[package]
name = "fakercraft"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37"
vulkano = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
image = "0.24"
winit = "0.29"
wgpu = "0.17"
nalgebra = "0.32"
noise = "0.8"